# schemawatch

./: .gitignore  README.md  openapi.yaml  openapi_old.yaml  pyproject.toml  requirements.txt  result.json  setup.py
.github/: publish.yml
.github/workflows/: ci.yml  pr-schema-comment.yml  schema-diff.yml  schemawatch.yml
api/: main.py
db/: database.py  models.py
examples/: new.yaml  old.yaml
schemawatch/: __init__.py  cli.py  diff_engine.py  parser.py
schemawatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_diff_engine.py  test_parser.py
